--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,3 +5,9 @@
   line-height: 125%;
   font-weight: 900;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__title  {
+    font-size: 22px;
+  }
+}
