--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
   margin-left: 18px;
   margin-top: 15px;
   cursor: pointer;
+  background: transparent url('../../../images/edit-button.svg') center no-repeat;
 }
 
 
@@ -19,6 +20,7 @@
 @media screen and (max-width: 600px) {
   .profile__edit-button {
     margin: 0 0 0 10px;
-
+    width: 18px;
+    height: 18px;
   }
 }
